Fixed some aligning problems on group activity

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -174,13 +174,13 @@ resurrection.activity.styl
     padding             0 0 0 35px
     bg                  color, #ebebeb
     height              100%
-    kalc                width, 50% \- 156px
+    kalc                width, 50% \- 146px
     border-left         1px solid #d5d5d5
     borderBox()
     abs()
 
     > div
-      size              269px, auto
+      size              280px, auto
 
     .referal-box
       margin-top        33px
@@ -1412,7 +1412,7 @@ body.group
       height               316px
       bg                   color, #e6e6e6
       margin               0 auto
-      kalc                 margin-right, 37% \- 306px
+      kalc                 margin-right, 50% \- 462px
       z-index              3
       bg                   size, 948px \, 316px
       bg                   image, -webkit-linear-gradient(90deg\, rgba(0,0,0,.06) 50%\, transparent 50%) \,
